--- a/argocdod/apps/crunchy-cluster/templates/postgresql-ca.yaml
+++ b/argocdod/apps/crunchy-cluster/templates/postgresql-ca.yaml
@@ -4,7 +4,7 @@ data:
 kind: Secret
 metadata:
   creationTimestamp: "2020-07-18T06:43:27Z"
-  name: postgresql-ca
+  name: "{{.Values.cluster_name}}-postgresql-ca"
   namespace: pgo
   resourceVersion: "6682798"
   selfLink: /api/v1/namespaces/pgo/secrets/postgresql-ca
