--- a/argocdod/apps/mongodb-operator/templates/opsmanager_cr.yaml
+++ b/argocdod/apps/mongodb-operator/templates/opsmanager_cr.yaml
@@ -12,6 +12,8 @@ spec:
     tls:
       secretRef:
         name: om-http-cert
+  externalConnectivity:
+    type: LoadBalancer
   applicationDatabase:
     members: {{ .Values.opsmanagercr.appdb.members }}
     persistent: {{ .Values.opsmanagercr.appdb.persistent }}
