--- a/argocdod/apps/mongodb-operator/templates/appdb-ca.yaml
+++ b/argocdod/apps/mongodb-operator/templates/appdb-ca.yaml
@@ -5,5 +5,5 @@ data:
     CERTIFICATE-----\r\n"
 kind: ConfigMap
 metadata:
-  creationTimestamp: null
+  namespace: {{ .Values.namespace }}
   name: appdb-ca
