--- a/argocdod/apps/mongodb-operator/templates/opsmanager_route.yaml
+++ b/argocdod/apps/mongodb-operator/templates/opsmanager_route.yaml
@@ -1,16 +1,19 @@
 ---
-apiVersion: route.openshift.io/v1
 kind: Route
+apiVersion: route.openshift.io/v1
 metadata:
-  labels:
-    application: opsmanager
   name: opsmanager
   namespace: {{ .Values.namespace }}
+  labels:
+    app: opsmanager-svc
 spec:
-  port:
-    targetPort: mongodb
   to:
     kind: Service
-    name: mongodb-opsmanager-svc
+    name: opsmanager-svc-ext
     weight: 100
+  port:
+    targetPort: 8443
+  tls:
+    termination: passthrough
+    insecureEdgeTerminationPolicy: Redirect
   wildcardPolicy: None
