--- a/argocdod/apps/mongodb-operator/values.yaml
+++ b/argocdod/apps/mongodb-operator/values.yaml
@@ -66,7 +66,7 @@ opsmanageradmin:
   FirstName: "cloudlet"
   LastName: "cloudlet"
   Password: "Aa123456123456!"
-  Username: "cloudlet"
+  Username: "mongodb-ops-manager"
 
 opsmanagercr:
   replicas: 1
