change to node-postgres

--- a/argocdod/apps/node-postgres/values.yaml
+++ b/argocdod/apps/node-postgres/values.yaml
@@ -2,7 +2,7 @@ image:
   repository: quay.io/amitai333/sampleapp
   tag: latest
 
-namespace: rh-sso
+namespace: node-postgres
 APPLICATION_NAME: sampleapp
 
 # DB VARS
