--- a/argocdod/apps/node-postgres/templates/node-with-postgres.yaml
+++ b/argocdod/apps/node-postgres/templates/node-with-postgres.yaml
@@ -54,6 +54,7 @@ spec:
       name: {{ .Values.APPLICATION_NAME }}
     spec:
       containers:
+      - name: sampleapp
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: Always
         name: {{ .Values.APPLICATION_NAME }}
