--- a/argocdod/apps/mongodb-operator/values.yaml
+++ b/argocdod/apps/mongodb-operator/values.yaml
@@ -74,7 +74,7 @@ opsmanagercr:
   appdb:
     members: 3
     persistent: false
-    podSpec:
+    podSpec: # Not Used
       persistence:
         multiple:
           data:
