--- a/argocdod/apps/mongodb-cluster/templates/opsconfig.yaml
+++ b/argocdod/apps/mongodb-cluster/templates/opsconfig.yaml
@@ -3,5 +3,5 @@ data:
   baseUrl: http://opsmanager-svc.mongodb.svc.cluster.local:8080
 kind: ConfigMap
 metadata:
-  namespace: {{ .Values.namespace }}
+  namespace: mongodb
   name: opsconfig
