--- a/argocdod/apps/mongodb-cluster/templates/replicaset.yaml
+++ b/argocdod/apps/mongodb-cluster/templates/replicaset.yaml
@@ -2,7 +2,7 @@
 apiVersion: mongodb.com/v1
 kind: MongoDB
 metadata:
-  namespace: {{ .Values.operator_namespace }}
+  namespace: {{ .Values.namespace }}
   name: {{ .Values.name }}
 
 spec:
