--- a/argocdod/templates/percona-mongo-operator.yaml
+++ b/argocdod/templates/percona-mongo-operator.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: percona-mongodb-operator-{{ template "cluster_name" . }}
+  name: percona-mongo-operator-{{ template "cluster_name" . }}
   namespace: {{ .Values.argocdNamespace }}
 spec:
   destination:
@@ -9,7 +9,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: {{ .Values.spec.project }}
   source:
-    path: argocdod/apps/percona-mongodb-operator
+    path: argocdod/apps/percona-mongo-operator
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
