--- a/argocdod/apps/percona-mongo-operator/Chart.yaml
+++ b/argocdod/apps/percona-mongo-operator/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: "Mongodb Replica set instance"
-name: percona-mongodb-operator
+name: percona-mongo-operator
 version: 1.0.0
