--- a/argocdod/apps/percona-mongo-cluster/templates/secrets.yaml
+++ b/argocdod/apps/percona-mongo-cluster/templates/secrets.yaml
@@ -9,9 +9,9 @@ data:
   MONGODB_BACKUP_PASSWORD: {{ .Values.MONGODB_BACKUP_PASSWORD | toString | b64enc }}
   MONGODB_CLUSTER_ADMIN_USER: {{ .Values.MONGODB_CLUSTER_ADMIN_USER | toString | b64enc }}
   MONGODB_CLUSTER_ADMIN_PASSWORD: {{ .Values.MONGODB_CLUSTER_ADMIN_PASSWORD | toString | b64enc }}
-  MONGODB_CLUSTER_MONITOR_USER: {{ .Values.MONGODB_CLUSTER_MONITOR_USER | toString | b64enc }}=
-  MONGODB_CLUSTER_MONITOR_PASSWORD: {{ .Values.MONGODB_CLUSTER_MONITOR_PASSWORD | toString | b64enc }}=
+  MONGODB_CLUSTER_MONITOR_USER: {{ .Values.MONGODB_CLUSTER_MONITOR_USER | toString | b64enc }}
+  MONGODB_CLUSTER_MONITOR_PASSWORD: {{ .Values.MONGODB_CLUSTER_MONITOR_PASSWORD | toString | b64enc }}
   MONGODB_USER_ADMIN_USER: {{ .Values.MONGODB_USER_ADMIN_USER | toString | b64enc }}
   MONGODB_USER_ADMIN_PASSWORD: {{ .Values.MONGODB_USER_ADMIN_PASSWORD | toString | b64enc }}
   PMM_SERVER_USER: {{ .Values.PMM_SERVER_USER | toString | b64enc }}
-  PMM_SERVER_PASSWORD: {{ .Values.PMM_SERVER_PASSWORD | toString | b64enc }}=
+  PMM_SERVER_PASSWORD: {{ .Values.PMM_SERVER_PASSWORD | toString | b64enc }}
