--- a/argocdod/apps/percona-mongo-operator/templates/crd.yaml
+++ b/argocdod/apps/percona-mongo-operator/templates/crd.yaml
@@ -46,6 +46,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: perconaservermongodbbackups.psmdb.percona.com
+  namespace: {{ .Values.namespace }}
 spec:
   group: psmdb.percona.com
   names:
@@ -91,6 +92,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: perconaservermongodbrestores.psmdb.percona.com
+  namespace: {{ .Values.namespace }}
 spec:
   group: psmdb.percona.com
   names:
