--- a/argocdod/apps/percona-mongo-operator/templates/rbac.yaml
+++ b/argocdod/apps/percona-mongo-operator/templates/rbac.yaml
@@ -92,11 +92,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: percona-server-mongodb-operator
+  namespace: {{ .Values.namespace }}
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: service-account-percona-server-mongodb-operator
+  namespace: {{ .Values.namespace }}
 subjects:
 - kind: ServiceAccount
   name: percona-server-mongodb-operator
