--- a/argocdod/apps/percona-mongo-operator/charts/pmm-server/templates/route.yaml
+++ b/argocdod/apps/percona-mongo-operator/charts/pmm-server/templates/route.yaml
@@ -2,11 +2,11 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: "{{ template "percona.fullname" . }}"
+  name: "monitoring"
   namespace: "{{ .Values.namespace }}"
   labels:
     component: pmm
-    app: {{ template "percona.fullname" . }}
+    app: monitoring
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -19,7 +19,7 @@ spec:
     insecureEdgeTerminationPolicy: Redirect
   to:
     kind: Service
-    name: "{{ template "percona.fullname" . }}-service"
+    name: "monitoring-service"
     weight: 100
   wildcardPolicy: None
 status:
