--- a/argocdod/apps/percona-mongo-operator/charts/pmm-server/values.yaml
+++ b/argocdod/apps/percona-mongo-operator/charts/pmm-server/values.yaml
@@ -27,6 +27,10 @@ persistence:
   accessMode: ReadWriteOnce
   size: 8Gi
 
+## set credentials
+credentials:
+  password: "admin"
+
 ## Configure resource requests and limits
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ##
