--- a/argocdod/apps/percona-mongo-cluster/templates/secrets.yaml
+++ b/argocdod/apps/percona-mongo-cluster/templates/secrets.yaml
@@ -13,5 +13,5 @@ data:
   MONGODB_CLUSTER_MONITOR_PASSWORD: "{{ .Values.MONGODB_CLUSTER_MONITOR_PASSWORD | toString | b64enc }}"
   MONGODB_USER_ADMIN_USER: "{{ .Values.MONGODB_USER_ADMIN_USER | toString | b64enc }}"
   MONGODB_USER_ADMIN_PASSWORD: "{{ .Values.MONGODB_USER_ADMIN_PASSWORD | toString | b64enc }}"
-  PMM_SERVER_USER: "{{ .Values.PMM_SERVER_USER | toString | b64enc }}"
-  PMM_SERVER_PASSWORD: "{{ .Values.PMM_SERVER_PASSWORD | toString | b64enc }}"
+  PMM_USER: "{{ .Values.PMM_SERVER_USER | toString | b64enc }}"
+  PMM_PASSWORD: "{{ .Values.PMM_SERVER_PASSWORD | toString | b64enc }}"
