--- a/argocdod/apps/percona-mongo-cluster/templates/cr.yaml
+++ b/argocdod/apps/percona-mongo-cluster/templates/cr.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   platform: openshift
 #  clusterServiceDNSSuffix: svc.cluster.local
-  image: percona/percona-server-mongodb-operator:1.4.0-mongod4.2
+  image: percona/percona-server-mongodb-operator:1.4.0-mongod4.0-debug
   imagePullPolicy: Always
 #  imagePullSecrets:
 #    - name: private-registry-credentials
