--- a/argocdod/apps/percona-mongo-cluster/templates/cr.yaml
+++ b/argocdod/apps/percona-mongo-cluster/templates/cr.yaml
@@ -1,4 +1,4 @@
-apiVersion: psmdb.percona.com/v1-4-0
+apiVersion: psmdb.percona.com/v1-3-0
 kind: PerconaServerMongoDB
 metadata:
   name: {{ .Values.cluster_name }}
@@ -6,18 +6,18 @@ metadata:
 spec:
   platform: openshift
 #  clusterServiceDNSSuffix: svc.cluster.local
-  image: percona/percona-server-mongodb-operator:1.4.0-mongod4.0
+  image: percona/percona-server-mongodb-operator:1.3.0-mongod4.0
   imagePullPolicy: Always
 #  imagePullSecrets:
 #    - name: private-registry-credentials
 #  runUid: 1001
-  allowUnsafeConfigurations: true
+  allowUnsafeConfigurations: false
 #  updateStrategy: RollingUpdate
   secrets:
     users: "{{ .Values.cluster_name }}-secrets"
   pmm:
     enabled: {{ .Values.pmm_enabled }}
-    image: percona/percona-server-mongodb-operator:1.4.0-pmm
+    image: percona/percona-server-mongodb-operator:1.3.0-pmm
     serverHost: monitoring-service
   replsets:
   - name: rs0
@@ -146,7 +146,7 @@ spec:
   backup:
     enabled: true
     restartOnFailure: true
-    image: percona/percona-server-mongodb-operator:1.4.0-backup
+    image: percona/percona-server-mongodb-operator:1.3.0-backup
     serviceAccountName: percona-server-mongodb-operator
 #    resources:
 #      limits:
