--- a/argocdod/apps/percona-mongo-cluster/templates/secrets.yaml
+++ b/argocdod/apps/percona-mongo-cluster/templates/secrets.yaml
@@ -5,13 +5,14 @@ metadata:
   namespace: {{ .Values.namespace }}
 type: Opaque
 data:
-  MONGODB_BACKUP_USER: "{{ .Values.MONGODB_BACKUP_USER | toString | b64enc }}"
-  MONGODB_BACKUP_PASSWORD: "{{ .Values.MONGODB_BACKUP_PASSWORD | toString | b64enc }}"
-  MONGODB_CLUSTER_ADMIN_USER: "{{ .Values.MONGODB_CLUSTER_ADMIN_USER | toString | b64enc }}"
-  MONGODB_CLUSTER_ADMIN_PASSWORD: "{{ .Values.MONGODB_CLUSTER_ADMIN_PASSWORD | toString | b64enc }}"
-  MONGODB_CLUSTER_MONITOR_USER: "{{ .Values.MONGODB_CLUSTER_MONITOR_USER | toString | b64enc }}"
-  MONGODB_CLUSTER_MONITOR_PASSWORD: "{{ .Values.MONGODB_CLUSTER_MONITOR_PASSWORD | toString | b64enc }}"
-  MONGODB_USER_ADMIN_USER: "{{ .Values.MONGODB_USER_ADMIN_USER | toString | b64enc }}"
-  MONGODB_USER_ADMIN_PASSWORD: "{{ .Values.MONGODB_USER_ADMIN_PASSWORD | toString | b64enc }}"
-  PMM_USER: "{{ .Values.PMM_SERVER_USER | toString | b64enc }}"
-  PMM_PASSWORD: "{{ .Values.PMM_SERVER_PASSWORD | toString | b64enc }}"
+  MONGODB_BACKUP_USER: YmFja3Vw
+  MONGODB_BACKUP_PASSWORD: YmFja3VwMTIzNDU2
+  MONGODB_CLUSTER_ADMIN_USER: Y2x1c3RlckFkbWlu
+  MONGODB_CLUSTER_ADMIN_PASSWORD: Y2x1c3RlckFkbWluMTIzNDU2
+  MONGODB_CLUSTER_MONITOR_USER: Y2x1c3Rlck1vbml0b3I=
+  MONGODB_CLUSTER_MONITOR_PASSWORD: Y2x1c3Rlck1vbml0b3IxMjM0NTY=
+  MONGODB_USER_ADMIN_USER: dXNlckFkbWlu
+  MONGODB_USER_ADMIN_PASSWORD: dXNlckFkbWluMTIzNDU2
+  PMM_USER: cG1t
+  PMM_PASSWORD: c3VwYXxefHBheno=
+
