--- a/argocdod/apps/percona-mongo-cluster/templates/secrets.yaml
+++ b/argocdod/apps/percona-mongo-cluster/templates/secrets.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "{{ .Values.cluster_name }}-secrets"
-  namespace: {{ .Values.namespace }}
+  name: my-cluster-name-secrets
+  namespace: "psmdb"
 type: Opaque
 data:
   MONGODB_BACKUP_USER: YmFja3Vw
@@ -13,6 +13,5 @@ data:
   MONGODB_CLUSTER_MONITOR_PASSWORD: Y2x1c3Rlck1vbml0b3IxMjM0NTY=
   MONGODB_USER_ADMIN_USER: dXNlckFkbWlu
   MONGODB_USER_ADMIN_PASSWORD: dXNlckFkbWluMTIzNDU2
-  PMM_USER: cG1t
-  PMM_PASSWORD: c3VwYXxefHBheno=
-
+  PMM_SERVER_USER: cG1t
+  PMM_SERVER_PASSWORD: c3VwYXxefHBheno=
