--- a/argocdod/apps/percona-mongo-cluster/templates/cr.yaml
+++ b/argocdod/apps/percona-mongo-cluster/templates/cr.yaml
@@ -1,12 +1,12 @@
 apiVersion: psmdb.percona.com/v1-3-0
 kind: PerconaServerMongoDB
 metadata:
-  name: {{ .Values.cluster_name }}
-  namespace: {{ .Values.namespace }}
+  name: my-cluster-name
+  namespace: "psmdb"
 spec:
-  platform: openshift
+#  platform: openshift
 #  clusterServiceDNSSuffix: svc.cluster.local
-  image: percona/percona-server-mongodb-operator:1.4.0-mongod4.0
+  image: percona/percona-server-mongodb-operator:1.3.0-mongod4.0
   imagePullPolicy: Always
 #  imagePullSecrets:
 #    - name: private-registry-credentials
@@ -14,14 +14,14 @@ spec:
   allowUnsafeConfigurations: false
 #  updateStrategy: RollingUpdate
   secrets:
-    users: "{{ .Values.cluster_name }}-secrets"
+    users: my-cluster-name-secrets
   pmm:
-    enabled: {{ .Values.pmm_enabled }}
-    image: percona/percona-server-mongodb-operator:1.4.0-pmm
+    enabled: true
+    image: percona/percona-server-mongodb-operator:1.3.0-pmm
     serverHost: monitoring-service
   replsets:
   - name: rs0
-    size: {{ .Values.repl_size }}
+    size: 3
     affinity:
       antiAffinityTopologyKey: "kubernetes.io/hostname"
 #      advanced:
@@ -46,13 +46,6 @@ spec:
 #      rack: rack-22
 #    nodeSelector:
 #      disktype: ssd
-#    livenessProbe:
-#      failureThreshold: 4
-#      initialDelaySeconds: 60
-#      periodSeconds: 30
-#      successThreshold: 1
-#      timeoutSeconds: 5
-#      startupDelaySeconds: 7200
     podDisruptionBudget:
       maxUnavailable: 1
 #      minAvailable: 0
@@ -60,7 +53,7 @@ spec:
       enabled: false
       exposeType: LoadBalancer
     arbiter:
-      enabled: {{ .Values.arbiter_enabled }}
+      enabled: false
       size: 1
       affinity:
        antiAffinityTopologyKey: "kubernetes.io/hostname"
@@ -112,7 +105,7 @@ spec:
     security:
       redactClientLogData: false
       enableEncryption: true
-      encryptionKeySecret: "{{ .Values.cluster_name }}-mongodb-encryption-key"
+      encryptionKeySecret: my-cluster-name-mongodb-encryption-key
       encryptionCipherMode: AES256-CBC
     setParameter:
       ttlMonitorSleepSecs: 60
@@ -145,16 +138,45 @@ spec:
 #      filter: '{}'
   backup:
     enabled: true
+    debug: true
     restartOnFailure: true
-    image: percona/percona-server-mongodb-operator:1.4.0-backup
+    image: percona/percona-server-mongodb-operator:1.3.0-backup
     serviceAccountName: percona-server-mongodb-operator
-#    resources:
-#      limits:
-#        cpu: "300m"
-#        memory: "0.5G"
-#      requests:
-#        cpu: "300m"
-#        memory: "0.5G"
+    coordinator:
+      enableClientsLogging: true
+      resources:
+        limits:
+          cpu: "100m"
+          memory: "0.2G"
+        requests:
+          cpu: "100m"
+          memory: "0.1G"
+          storage: "1Gi"
+      #storageClass: aws-gp2
+      affinity:
+       antiAffinityTopologyKey: "kubernetes.io/hostname"
+#       advanced:
+#         nodeAffinity:
+#           requiredDuringSchedulingIgnoredDuringExecution:
+#             nodeSelectorTerms:
+#             - matchExpressions:
+#               - key: kubernetes.io/e2e-az-name
+#                 operator: In
+#                 values:
+#                 - e2e-az1
+#                 - e2e-az2
+#     tolerations: 
+#     - key: "node.alpha.kubernetes.io/unreachable"
+#       operator: "Exists"
+#       effect: "NoExecute"
+#       tolerationSeconds: 6000
+#     priorityClassName: high-priority
+#     annotations:
+#       iam.amazonaws.com/role: role-arn
+#     labels:
+#       rack: rack-22
+#     nodeSelector:
+#       disktype: ssd
     storages:
 #      s3-us-west:
 #        type: s3
