--- a/argocdod/apps/percona-mongo-operator/templates/crd.yaml
+++ b/argocdod/apps/percona-mongo-operator/templates/crd.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: perconaservermongodbs.psmdb.percona.com
-  namespace: {{ .Values.namespace }}
+  namespace: "psmdb"
 spec:
   group: psmdb.percona.com
   names:
@@ -26,9 +26,6 @@ spec:
     - name: v1-3-0
       storage: false
       served: true
-    - name: v1-4-0
-      storage: false
-      served: true
     - name: v1alpha1
       storage: false
       served: true
@@ -46,7 +43,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: perconaservermongodbbackups.psmdb.percona.com
-  namespace: {{ .Values.namespace }}
+  namespace: "psmdb"
 spec:
   group: psmdb.percona.com
   names:
@@ -92,7 +89,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: perconaservermongodbrestores.psmdb.percona.com
-  namespace: {{ .Values.namespace }}
+  namespace: "psmdb"
 spec:
   group: psmdb.percona.com
   names:
