--- a/argocdod/apps/percona-mongo-operator/templates/operator.yaml
+++ b/argocdod/apps/percona-mongo-operator/templates/operator.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: percona-server-mongodb-operator
-  namespace: {{ .Values.namespace }}
+  namespace: "psmdb"
 spec:
   replicas: 1
   selector:
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: percona-server-mongodb-operator
       containers:
         - name: percona-server-mongodb-operator
-          image: percona/percona-server-mongodb-operator:1.4.0
+          image: percona/percona-server-mongodb-operator:1.3.0
           ports:
           - containerPort: 60000
             name: metrics
