--- a/argocdod/apps/percona-mongo-operator/templates/rbac.yaml
+++ b/argocdod/apps/percona-mongo-operator/templates/rbac.yaml
@@ -2,7 +2,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: percona-server-mongodb-operator
-  namespace: {{ .Values.namespace }}
+  namespace: "psmdb"
 rules:
 - apiGroups:
   - psmdb.percona.com
@@ -92,13 +92,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: percona-server-mongodb-operator
-  namespace: {{ .Values.namespace }}
+  namespace: "psmdb"
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: service-account-percona-server-mongodb-operator
-  namespace: {{ .Values.namespace }}
+  namespace: "psmdb"
 subjects:
 - kind: ServiceAccount
   name: percona-server-mongodb-operator
