--- a/argocdod/apps/percona-mongo-cluster/templates/cr.yaml
+++ b/argocdod/apps/percona-mongo-cluster/templates/cr.yaml
@@ -4,7 +4,7 @@ metadata:
   name: my-cluster-name
   namespace: "psmdb"
 spec:
-#  platform: openshift
+  platform: openshift
 #  clusterServiceDNSSuffix: svc.cluster.local
   image: percona/percona-server-mongodb-operator:1.3.0-mongod4.0
   imagePullPolicy: Always
