--- a/argocdod/apps/node-postgres/templates/node-with-postgres.yaml
+++ b/argocdod/apps/node-postgres/templates/node-with-postgres.yaml
@@ -13,8 +13,8 @@ metadata:
   namespace: {{ .Values.namespace }}
 spec:
   ports:
-  - port: 8080
-    targetPort: 8080
+  - port: 443
+    targetPort: 443
   selector:
     deploymentConfig: {{ .Values.APPLICATION_NAME }}
 ---
@@ -28,10 +28,13 @@ metadata:
   name: {{ .Values.APPLICATION_NAME }}
   namespace: {{ .Values.namespace }}
 spec:
-  host: ""
+  host: "{{ .Values.APPLICATION_NAME }}-{{ .Values.namespace }}.apps.{{ template "cluster_fqdn" . }}"
   to:
     kind: Service
     name: {{ .Values.APPLICATION_NAME }}
+  tls:
+    termination: passthrough
+    insecureEdgeTerminationPolicy: Redirect
 ---
 apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
@@ -61,12 +64,12 @@ spec:
         livenessProbe:
           httpGet:
             path: /health-check
-            port: 8080
+            port: 443
           initialDelaySeconds: 3
           periodSeconds: 3
           failureThreshold: 2
         ports:
-        - containerPort: 8080
+        - containerPort: 443
           name: http
           protocol: TCP
       terminationGracePeriodSeconds: 75
