--- a/argocdod/apps/minio-operator/templates/secrets.yaml
+++ b/argocdod/apps/minio-operator/templates/secrets.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 Kind: Secret
 metadata:
-  name: {{ .Values.Name }}
+  name: {{ .Values.name }}
   namespace: {{ .Values.namespace }}
   labels:
-    app: {{ .Values.Name }}
+    app: {{ .Values.name }}
 type: Opaque
 data:
   accesskey: {{ if .Values.accesskey }}{{ .Values.accesskey | b64enc | quote }}{{ else }}{{randAlphaNum 20 |  b64enc | quote}}{{ end }}
